fix missing padding for iOS status bar

--- a/src/css/components/NavigationBar.less
+++ b/src/css/components/NavigationBar.less
@@ -72,7 +72,7 @@
 	z-index: @view-transition-stack-top + 1;
 
 	// make room for the iOS statusbar
-	.device--iPhone & {
+	.device--iOS & {
 		padding-top: @statusbar-height;
 	}
 }
@@ -281,12 +281,3 @@
 	from { opacity: 1; transform: translate3d(0, 0, 0); }
 	to   { opacity: 0; transform: translate3d(@transition-distance, 0, 0); }
 }
-
-
-
-
-
-
-
-
-
